--- a/package.json
+++ b/package.json
@@ -14,13 +14,11 @@
     "@tailwindcss/vite": "^4.0.3",
     "clsx": "^2.1.1",
     "framer-motion": "^12.3.1",
-<<<<<<< HEAD
     "luv-allure": "file:",
-=======
     "prop-types": "^15.8.1",
->>>>>>> 4ef4e46bcc97562cd8033a30324aa1e503cbc5b0
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
     "tailwindcss": "^4.0.3"
