--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopify-backend",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,12 +11,6 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@apollo/client": "^3.13.1",
-    "axios": "^1.7.9",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "graphql": "^16.10.0",
-    "shopify-backend": "file:"
+    "backend": "file:"
   }
 }
