--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "init-cms": "node scripts/init-cms.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.2.9",
+    "multer": "^1.4.5-lts.2",
     "node-fetch": "^2.6.7"
   },
   "devDependencies": {
