--- a/backend/.env
+++ b/backend/.env
@@ -7,8 +7,8 @@ MONGODB_URI=mongodb+srv://shopluvsallure:CpOWmeb5KbSCGLGY@cluster0.xsdiy.mongodb
 PORT=3001
 
 
-FRONTEND_URL=https://cafd-105-119-11-219.ngrok-free.app
+FRONTEND_URL= https://493a-105-119-11-233.ngrok-free.app
 # Paystack API Keys
 PAYSTACK_PUBLIC_KEY=pk_test_f293b7410de703690354338c2bc35471d2849b09
 PAYSTACK_SECRET_KEY=sk_test_0a12cfd2a9feb4ec00194547dd995136a4c2d01a
-PAYSTACK_CALLBACK_URL= https://cafd-105-119-11-219.ngrok-free.app/api/payment/callback
+PAYSTACK_CALLBACK_URL=  https://493a-105-119-11-233.ngrok-free.app/api/payment/callback
