--- a/backend/.env
+++ b/backend/.env
@@ -11,7 +11,7 @@ FRONTEND_URL= http://localhost:5173
 # Paystack API Keys
 PAYSTACK_PUBLIC_KEY=pk_test_f293b7410de703690354338c2bc35471d2849b09
 PAYSTACK_SECRET_KEY=sk_test_0a12cfd2a9feb4ec00194547dd995136a4c2d01a
-PAYSTACK_CALLBACK_URL=  https://493a-105-119-11-233.ngrok-free.app/api/payment/callback
+PAYSTACK_CALLBACK_URL=  https://c38d-102-89-83-1.ngrok-free.app/api/payment/callback
 
 BOLT_API_KEY=""
 GIGL_API_KEY=""
