--- a/backend/.env
+++ b/backend/.env
@@ -8,10 +8,11 @@ PORT=3001
 
 
 FRONTEND_URL= http://localhost:5173
+
 # Paystack API Keys
 PAYSTACK_PUBLIC_KEY=pk_test_f293b7410de703690354338c2bc35471d2849b09
 PAYSTACK_SECRET_KEY=sk_test_0a12cfd2a9feb4ec00194547dd995136a4c2d01a
-PAYSTACK_CALLBACK_URL=  https://c38d-102-89-83-1.ngrok-free.app/api/payment/callback
+PAYSTACK_CALLBACK_URL=https://01aa-102-89-69-135.ngrok-free.app/api/payment/callback
 
 BOLT_API_KEY=""
 GIGL_API_KEY=""
